--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,196 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MenuActivity"
+    android:background="@drawable/imagenmenustart">
 
-    <TableLayout
-        android:id="@+id/tableLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:stretchColumns="*"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <TableRow>
-
-            <TextView
-                android:id="@+id/txtContador"
-                android:layout_margin="5dp"
-                android:layout_span="2"
-                android:text="Contador"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="28dp" />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Juego de Memoria"
+            android:textSize="45dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"/>
             <Button
-                android:id="@+id/btnReiniciarComenzar"
-                android:layout_margin="5dp"
-                android:layout_span="2"
-                android:backgroundTint="#FFFFFF"
-                android:onClick="comenzarJuego"
+                android:id="@+id/comoJugar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Como jugar"
+                android:textSize="23dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="10dp"
+                />
+            <Button
+                android:onClick="comenzarJuegoBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Comenzar"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="26dp"
-                app:strokeWidth="2dp" />
-        </TableRow>
+                android:textSize="23dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                />
+    </RelativeLayout>
 
-        <TableRow>
-
-            <Button
-                android:id="@+id/tarjeta1"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta2"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta3"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta4"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:id="@+id/tarjeta5"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta6"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta7"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta8"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:id="@+id/tarjeta9"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta10"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta11"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta12"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-        </TableRow>
-
-        <TableRow>
-
-            <Button
-                android:id="@+id/tarjeta13"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta14"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta15"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-
-            <Button
-                android:id="@+id/tarjeta16"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#000000"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:onClick="onClick"/>
-        </TableRow>
-
-
-    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
