--- a/app/src/main/res/values-land/themes.xml
+++ b/app/src/main/res/values-land/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.JuegoDeMemoria" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -29,7 +29,18 @@
         <item name="android:textSize">23dp</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentEnd">false</item>
-        <item name="android:layout_toRightOf">@+id/btn1</item>
+        <item name="android:layout_toRightOf">@+id/btnAyuda</item>
         <item name="android:layout_marginLeft">10dp</item>
+    </style>
+    <style name="btnJuego">
+        <item name ="android:layout_height">60dp</item>
+        <item name ="android:layout_margin">1dp</item>
+        <item name ="android:backgroundTint">#000000</item>
+        <item name ="android:textColor">@color/black</item>
+        <item name ="android:textSize">20dp</item>
+    </style>
+    <style name="flecha">
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 </resources>
