--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.JuegoDeMemoria" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/grey</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -30,6 +30,7 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentEnd">true</item>
         <item name="android:layout_marginRight">10dp</item>
+
     </style>
     <style name="btnEnComoJugar1">
         <item name="android:layout_width">wrap_content</item>
@@ -38,5 +39,15 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_marginLeft">10dp</item>
     </style>
-
+    <style name="btnJuego">
+        <item name ="android:layout_height">100dp</item>
+        <item name ="android:layout_margin">5dp</item>
+        <item name ="android:backgroundTint">#000000</item>
+        <item name ="android:textColor">@color/black</item>
+        <item name ="android:textSize">20dp</item>
+    </style>
+    <style name="flecha">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
 </resources>
