--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,4 +50,7 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_marginTop">8dp</item>
     </style>
+    <style>
+
+    </style>
 </resources>
