--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -33,6 +33,7 @@
             android:textSize="23dp" />
 
         <Button
+            android:id="@+id/btnComenzarDesdeAyuda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="comenzarJuegoBtn"
