--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -12,7 +12,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Posición"
+            android:text="@string/Posicion"
             android:textAlignment="center"
             android:textSize="16dp"
             android:textStyle="bold" />
@@ -23,7 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Nombre"
+            android:text="@string/Nombre"
             android:textAlignment="center"
             android:textStyle="bold"
             />
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:text="Movimientos"
+            android:text="@string/Movimientos"
             android:textStyle="bold" />
     </TableRow>
 
@@ -208,7 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="8dp"
-            android:text="Jugar" />
+            android:text="@string/Jugar" />
         <Button
             android:onClick="volver"
             android:layout_width="0dp"
